@@ -1,3 +1,5 @@
+    - added support for postfilter functions that are applied to compiled
+      template right after compilation. (Andrei)
     - fixed the name of clear_compile_tpl() API function to clear_compiled_tpl.
       (Andrei)
     - added fix for removing comments so that the line numbers are reported
